--- a/petPicsTemplatePage.html
+++ b/petPicsTemplatePage.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Base Page</title>
+        <!-- Font used for search button -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
             /*Navbar*/
             #nav{
@@ -18,6 +20,34 @@
                 padding: 14px;
                 text-decoration: none;
             }
+            #nav a:hover {
+                background-color: #999999;
+                color: black;
+            }
+            #nav .search-container {
+                float: left;
+            }
+
+            #nav input[type=text] {
+                float: left;
+                padding: 3px;
+                border: none;
+                margin-top: 14px;
+            }
+            #nav .search-container button {
+              float: right;
+              padding: 1px;
+              margin-top: 14px;
+              margin-right: 16px;
+              font-size: 14px;
+              background: #ffffff;
+              border: none;
+              cursor: pointer;
+            }
+            #nav .search-container button:hover {
+                background: #ccc;
+            }
+
             body{
                 background-color: #fbe5ce;
             }
@@ -31,6 +61,7 @@
                 bottom: 0;
                 width: 100%;
             }
+
         </style>
     </head>
     <body>
@@ -41,6 +72,12 @@
             <a href="petpics.com/friends">Friends</a>
             <a href="petpics.com/messages">Messages</a>
             <a href="petpics.com/settings">Settings</a>
+            <div class="search-container">
+                <form action="">
+                    <input type="text" placeholder="Search..." name="search">   
+                    <button type="submit"><i class="fa fa-search"></i></button>
+                </form>
+            </div>
         </div>
         
         
