--- a/basepage_profileinfo.html
+++ b/basepage_profileinfo.html
@@ -145,9 +145,12 @@
         <!-- Links modified as created when demonstrating -->
         <div id = "nav" class="stickyTop">
             <a href="petpics.com/home" style = "float:left;">Home</a>
-            <a href="petpics.com/friends">Friends</a> <!-- not sure we need this on the header -->
-            <a href="petpics.com/messages">Messages</a>
+            <a href="petpics.com/logout">Logout</a>
             <a href="petpics.com/settings">Settings</a>
+            <a href="petpics.com/notify">Notify</a>
+            <a href="petpics.com/messages">Messages</a>
+            <a href="petpics.com/profile">Profile</a>
+            <a href="petpics.com/newsfeed">Newsfeed</a>
             <div class="search-container">
                 <form action="">
                     <input type="text" placeholder="Search..." name="search">   
