Updated Profile to access Search - RM

--- a/profilePage.html
+++ b/profilePage.html
@@ -189,7 +189,7 @@
             	<a href="petpics.com/profile">Profile</a>
             	<a href="petpics.com/newsfeed">Newsfeed</a>
             	<div class="search-container">
-                		<form action="">
+                		<form action="search.php">
                     		<input type="text" placeholder="Search..." name="search">   
                    		 <button type="submit"><i class="fa fa-search"></i></button>
                 		</form>
